# peewee-scrapy

./: README.md  aosfatos.py  database.db  pyproject.toml  scrapy-quotes.py  test.py
